# FLEX

./: CMakeLists.txt  LICENSE  README.md  changesavelocation.h  changesavelocation.ui  documentfileconverter.h  imagefileconverter.h  mainarchiveconverter.cpp  mainarchiveconverter.h  maindocumentconverter.cpp  maindocumentconverter.h  mainimageconverter.cpp  mainimageconverter.h  mainvideoconverter.cpp  mainvideoconverter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  videofileconverter.cpp  videofileconverter.h
core_utilities/: draganddrop.h
core_utilities/archive_converter/: archivefileconverter.h  mainarchiveconverter.cpp  mainarchiveconverter.h
core_utilities/bulk_conversion/: bulkconvertmanager.cpp  bulkconvertmanager.h
core_utilities/document_converter/: documentfileconverter.h  maindocumentconverter.cpp  maindocumentconverter.h
core_utilities/image_converter/: imagefileconverter.h  mainimageconverter.cpp  mainimageconverter.h
core_utilities/spreadsheet_converter/: mainspreadconverter.cpp  mainspreadconverter.h  spreadfileconverter.h
core_utilities/video_converter/: mainspreadconverter.cpp  mainspreadconverter.h  mainvideoconverter.cpp  mainvideoconverter.h  videofileconverter.h
libs/libarchive/include/: archive.h  archive_entry.h
libs/libarchive/include/libxml2/libxml/: xmlversion.h
libs/libarchive/win64/pkgconfig/: libarchive.pc  libcrypto.pc  liblzma.pc  libssl.pc  libxml-2.0.pc  openssl.pc
source/: archivepreferences.cpp  archivepreferences.h  archivepreferences.ui  bulkconvertmanager.cpp  bulkconvertmanager.h  changesavelocation.cpp  changesavelocation.h  documentfileconverter.h  documentpreferences.cpp  documentpreferences.h  documentpreferences.ui  imagepreferences.cpp  imagepreferences.ui  main.cpp  mainarchiveconverter.cpp  maindocumentconverter.cpp  maindocumentconverter.h  mainimageconverter.cpp  mainimageconverter.h  mainspreadconverter.cpp  mainspreadconverter.h  mainvideoconverter.cpp  mainvideoconverter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  spreadfileconverter.h  spreadsheetpreferences.cpp  spreadsheetpreferences.h  videoaudiopreferences.cpp  videoaudiopreferences.h  videoaudiopreferences.ui  videofileconverter.h
ui_elements/archive_preferences/: archivepreferences.cpp  archivepreferences.ui
ui_elements/change_save_location/: changesavelocation.cpp  changesavelocation.ui
ui_elements/document_preferences/: documentpreferences.cpp  documentpreferences.h  documentpreferences.ui
ui_elements/image_preferences/: imagepreferences.cpp  imagepreferences.h  imagepreferences.ui
ui_elements/main_window/: mainwindow.cpp  mainwindow.h  mainwindow.ui
ui_elements/spreadsheet_preferences/: spreadsheetpreferences.cpp  spreadsheetpreferences.h  spreadsheetpreferences.ui
ui_elements/video_audio_preferences/: videoaudiopreferences.cpp  videoaudiopreferences.ui
